html close to done, created styles.css - about to change to style.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Stuart Rickard Portfolio</title>
   </head>
   <body>
@@ -29,6 +30,7 @@
       <p>Thinking Outside the Flexbox</p>
     </section>
     <main>
+      <!-- Add ids for navs? -->
       <section class=main-section>
         <div class=main-section-Title>About Me</div>
         <div class=main-section-Content id=about-me-text>
@@ -47,7 +49,6 @@
         <div class=main-section-Title>Work</div>
         <div class=main-section-Content>
           <!-- Add alt text for all cards -->
-          <!-- Add text for cards -->
           <article class=work-card>
             <img id=circles src="#" alt="placeholder">
             <div>circles
@@ -55,27 +56,27 @@
             </div>
           </article>
           <article class=work-card>
-            <img id=circles src="#" alt="placeholder">
-            <div>circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            <img id=abstract-art src="#" alt="placeholder">
+            <div>Abstract Art
+              <p>Generates Mondrian-like compositions using the CSS box model</p>
             </div>
           </article>
           <article class=work-card>
-            <img id=circles src="#" alt="placeholder">
-            <div>circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            <img id=run-buddy src="#" alt="placeholder">
+            <div>Run Buddy
+              <p>A two-page website made as part of my coding bootcamp course</p>
             </div>
           </article>
           <article class=work-card>
-            <img id=circles src="#" alt="placeholder">
-            <div>circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            <img id=calculator src="#" alt="placeholder">
+            <div>Calculator
+              <p>Numbers are its specialty</p>
             </div>
           </article>
           <article class=work-card>
-            <img id=circles src="#" alt="placeholder">
-            <div>circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            <img id=BAU src="#" alt="placeholder">
+            <div>BAU
+              <p>HTML-only website I created for my company before I took the coding bootcamp course</p>
             </div>
           </article>
         </div>
@@ -83,7 +84,11 @@
       <section class=main-section>
         <div class=main-section-Title>Contact Me</div>
         <div class=main-section-Content>
-          <!-- Add links -->
+          <a href:="tel:+15104999400">+1.510.499.9400</a>
+          <a href:="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
+          <!-- Add refs -->
+          <a href:="#">Github</a>
+          <a href:="#">Spotify</a>
         </div>
       </section>
     </main>
