progress on contact me and misc

--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
         <!-- Add resume link -->
         <li><a href="#">Resume</a></li>
       </ul></nav>
-      <!-- ADD STYLE OPTIONS IF TIME ALLOWS
-        <div>
-          <p>
-            Choose a style: 
-          </p>
-          <!-- Add style refs 
-          <a>v2.0</a>
-          <a>space</a>
-        </div>
-      -->
     </header>
     <section class=band-below-header>
       <p>Thinking Outside the Flexbox</p>
@@ -84,12 +74,13 @@
       </section>
       <section class=main-section>
         <div class=main-section-Title id="contact-me-title">Contact Me</div>
-        <div class=main-section-Content>
+        <div class=main-section-Content id="contact-me-content">
           <a href:="tel:+15104999400">+1.510.499.9400</a>
           <a href:="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
           <!-- Add refs -->
           <a href:="#">Github</a>
           <a href:="#">Spotify</a>
+          <!-- Photo credit -->
         </div>
       </section>
     </main>
