under construction page and images and work-card

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <li><a href="#about-me-title">About</a></li>
         <li><a href="#work-title">Work</a></li>
         <li><a href="#contact-me-title">Contact</a></li>
-        <!-- Add resume link -->
-        <li><a href="#">Resume</a></li>
+        <li><a href="./underconstruction.html">Resume</a></li>
       </ul></nav>
     </header>
     <section class=band-below-header>
@@ -41,10 +40,12 @@
         <div class=main-section-Content id="work-card-container">
           <!-- Add alt text for all cards -->
           <article class=work-card>
-            <img id=circles src="#" alt="placeholder">
-            <div>circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
-            </div>
+            <a href="https://stuart-rickard.github.io/sandbox/circles/">
+              <img id=circles src="assets/images/waves.jpg" alt="placeholder">
+              <div>circles
+                <p>Uses the CSS box model to rotate concentric circles within one another</p>
+              </div>
+            </a>
           </article>
           <article class=work-card>
             <img id=abstract-art src="#" alt="placeholder">
