just about ready for responsive css coding

--- a/index.html
+++ b/index.html
@@ -14,61 +14,78 @@
         <li><a href="#about-me-title">About</a></li>
         <li><a href="#work-title">Work</a></li>
         <li><a href="#contact-me-title">Contact</a></li>
-        <li><a href="./underconstruction.html">Resume</a></li>
+        <li><a href="underconstruction.html">Resume</a></li>
       </ul></nav>
     </header>
     <section class=band-below-header>
       <p>Thinking Outside the Flexbox</p>
+      <!-- Photo credit: the waves photo was downloaded from a website that offered free photos -->
     </section>
     <main>
       <section class=main-section>
         <div class=main-section-Title id="about-me-title">About Me</div>
         <div class=main-section-Content id=about-me-text>
-          <p>
-            I'm very interested generally in how humans can use technology to improve their lives.  Specifically to coding, I love user interfaces that are highly intuitive for beginners and also provide a path for more powerful use that unfolds as the user spends time working with the interface.  I find these interfaces very elegant, and I really appreciate elegant coding also.
-          </p>
-          <p>
-            For the past thirty years I have worked in the real estate development business, and I have been a real estate entrepreneur running my own business since 2003.  Real estate development has many aspects that are similar to software development: collaboration, creativity, and making a product, to name three.  Since I was a child, I've loved coding, but my career path led me to real estate until this time.  I'm very excited to be able to work in coding now.
-          </p>
-          <p>
-            Education: BS Environmental Design, UC Berkeley; MBA, UC Berkeley.  Currently enrolled in UC Berkeley Extension Full Stack Coding Bootcamp.
-          </p>
+          <img src="assets/images/face.png" alt="painted face">
+          <!-- Image credit: this is cropped from a Picasso painting -->
+          <div>
+            <p>
+              I'm very interested generally in how humans can use technology to improve their lives.  Specifically to coding, I love user interfaces that are highly intuitive for beginners and also provide a path for more powerful use that unfolds as the user spends time working with the interface.  I find these interfaces very elegant, and I really appreciate elegant coding also.
+            </p>
+            <p>
+              For the past thirty years I have worked in the real estate development business, and I have been a real estate entrepreneur running my own business since 2003.  Real estate development has many aspects that are similar to software development: collaboration, creativity, and making a product, to name three.  Since I was a child, I've loved coding, but my career path led me to real estate until this time.  I'm very excited to be able to work in coding now.
+            </p>
+            <p>
+              Education: BS Environmental Design, UC Berkeley; MBA, UC Berkeley.  Currently enrolled in UC Berkeley Extension Full Stack Coding Bootcamp.
+            </p>
+          </div>
         </div>
       </section>
       <section class=main-section>
         <div class=main-section-Title id="work-title">Work</div>
         <div class=main-section-Content id="work-card-container">
-          <!-- Add alt text for all cards -->
+          <!-- Circles - this links to a live page -->
           <article class=work-card>
             <a href="https://stuart-rickard.github.io/sandbox/circles/">
-              <img id=circles src="assets/images/waves.jpg" alt="placeholder">
-              <div>circles
-                <p>Uses the CSS box model to rotate concentric circles within one another</p>
-              </div>
+              <img id=circles src="assets/images/circles.png" alt="multi-colored graphic pattern with circles">
             </a>
+            <div>Circles
+              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            </div>
           </article>
+          <!-- Abstract Art - this links to the "under construction" page -->
           <article class=work-card>
-            <img id=abstract-art src="#" alt="placeholder">
+            <a href="underconstruction.html">
+              <img id=abstract-art src="assets/images/abstract.png" alt="primary color composition inspried by Piet Mondtrian's art">
+            </a>
             <div>Abstract Art
               <p>Generates Mondrian-like compositions using the CSS box model</p>
             </div>
           </article>
+          <!-- Run Buddy - this links to a live page -->
           <article class=work-card>
-            <img id=run-buddy src="#" alt="placeholder">
+            <a href="https://stuart-rickard.github.io/runbuddy2/">
+              <img id=run-buddy src="assets/images/run-buddy.png" alt="screenshot showing a website">
+            </a>
             <div>Run Buddy
               <p>A two-page website made as part of my coding bootcamp course</p>
             </div>
           </article>
+          <!-- Calculator - this links to the "under construction" page -->
           <article class=work-card>
-            <img id=calculator src="#" alt="placeholder">
+            <a href="underconstruction.html">
+              <img id=calculator src="assets/images/calculator.png" alt="calculator with numbered keys">
+            </a>
             <div>Calculator
               <p>Numbers are its specialty</p>
             </div>
           </article>
+          <!-- BAU - this links to the "under construction" page -->
           <article class=work-card>
-            <img id=BAU src="#" alt="placeholder">
+            <a href="underconstruction.html">
+              <img id=BAU src="assets/images/bau.png" alt="screenshot showing a website">
+            </a>
             <div>BAU
-              <p>HTML-only website I created for my company before I took the coding bootcamp course</p>
+              <p>Basic website I created for my company before I took the coding bootcamp course</p>
             </div>
           </article>
         </div>
@@ -76,12 +93,11 @@
       <section class=main-section>
         <div class=main-section-Title id="contact-me-title">Contact Me</div>
         <div class=main-section-Content id="contact-me-content">
-          <a href:="tel:+15104999400">+1.510.499.9400</a>
-          <a href:="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
-          <!-- Add refs -->
-          <a href:="#">Github</a>
-          <a href:="#">Spotify</a>
-          <!-- Photo credit -->
+          <a href="tel:+15104999400">+1.510.499.9400</a>
+          <a href="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
+          <!-- These two links go to the "under construction" page -->
+          <a href="underconstruction.html">Github</a>
+          <a href="underconstruction.html">Spotify</a>
         </div>
       </section>
     </main>
