completed portfolio site with screen-size responsiveness

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <section class=main-section>
         <div class=main-section-Title id="about-me-title">About Me</div>
         <div class=main-section-Content id=about-me-text>
-          <img src="assets/images/face.png" alt="painted face">
-          <!-- Image credit: this is cropped from a Picasso painting -->
+          <img src="assets/images/face.png" alt="cubist painting of a face">
+          <!-- Image credit: the face is cropped from a Picasso painting -->
           <div>
             <p>
               I'm very interested generally in how humans can use technology to improve their lives.  Specifically to coding, I love user interfaces that are highly intuitive for beginners and also provide a path for more powerful use that unfolds as the user spends time working with the interface.  I find these interfaces very elegant, and I really appreciate elegant coding also.
