updated 'under construction' webpage

--- a/underconstruction.html
+++ b/underconstruction.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Under Construction!</h1>
     <img src="assets/images/construction.JPG" alt="Construction site with drill machine">
+    <br>
+    <img src="assets/images/adeline-place-time-lapse.gif" alt="Timelapse of construction of Adeline Place building in Emeryville, CA">
   </body>
 </html>
