fixed spacing at contact me section in small screen size; added github link

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <div class=main-section-Content id="contact-me-content">
           <a href="tel:+15104999400">+1.510.499.9400</a>
           <a href="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
-          <!-- These two links go to the "under construction" page -->
-          <a href="underconstruction.html">Github</a>
+          <a href="https://github.com/stuart-rickard">Github</a>
+          <!-- This link goes to the "under construction" page -->
           <a href="underconstruction.html">Spotify</a>
         </div>
       </section>
