added Sunny Weekend

--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
               <p>Generates Mondrian-like compositions using the CSS box model</p>
             </div>
           </article>
+          <!-- Sunny Weekend - this links to a live page -->
+          <article class=work-card>
+            <a href="https://deivrs60.github.io/sunny-weekend/">
+              <img id=sunny-weekend src="assets/images/sunny-weekend.png" alt="screenshot showing a website">
+            </a>
+            <div>Sunny Weekend
+              <p>Uses Google Maps and OpenWeather API's to select a city by location and temperature</p>
+            </div>
+          </article>
           <!-- Run Buddy - this links to a live page -->
           <article class=work-card>
             <a href="https://stuart-rickard.github.io/runbuddy2/">
