added penguin planner

--- a/index.html
+++ b/index.html
@@ -4,104 +4,177 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Stuart Rickard Portfolio</title>
   </head>
   <body>
     <header>
       <h1>Stuart Rickard</h1>
-      <nav><ul>
-        <li><a href="#about-me-title">About</a></li>
-        <li><a href="#work-title">Work</a></li>
-        <li><a href="#contact-me-title">Contact</a></li>
-        <li><a href="underconstruction.html">Resume</a></li>
-      </ul></nav>
+      <nav>
+        <ul>
+          <li><a href="#about-me-title">About</a></li>
+          <li><a href="#work-title">Work</a></li>
+          <li><a href="#contact-me-title">Contact</a></li>
+          <li><a href="underconstruction.html">Resume</a></li>
+        </ul>
+      </nav>
     </header>
-    <section class=band-below-header>
+    <section class="band-below-header">
       <p>Thinking Outside the Flexbox</p>
       <!-- Photo credit: the waves photo was downloaded from a website that offered free photos -->
     </section>
     <main>
-      <section class=main-section>
-        <div class=main-section-Title id="about-me-title">About Me</div>
-        <div class=main-section-Content id=about-me-text>
-          <img src="assets/images/face.png" alt="cubist painting of a face">
+      <section class="main-section">
+        <div class="main-section-Title" id="about-me-title">About Me</div>
+        <div class="main-section-Content" id="about-me-text">
+          <img src="assets/images/face.png" alt="cubist painting of a face" />
           <!-- Image credit: the face is cropped from a Picasso painting -->
           <div>
             <p>
-              I'm very interested generally in how humans can use technology to improve their lives.  Specifically to coding, I love user interfaces that are highly intuitive for beginners and also provide a path for more powerful use that unfolds as the user spends time working with the interface.  I find these interfaces very elegant, and I really appreciate elegant coding also.
+              I'm very interested generally in how humans can use technology to
+              improve their lives. Specifically to coding, I love user
+              interfaces that are highly intuitive for beginners and also
+              provide a path for more powerful use that unfolds as the user
+              spends time working with the interface. I find these interfaces
+              very elegant, and I really appreciate elegant coding also.
             </p>
             <p>
-              For the past thirty years I have worked in the real estate development business, and I have been a real estate entrepreneur running my own business since 2003.  Real estate development has many aspects that are similar to software development: collaboration, creativity, and making a product, to name three.  Since I was a child, I've loved coding, but my career path led me to real estate until this time.  I'm very excited to be able to work in coding now.
+              For the past thirty years I have worked in the real estate
+              development business, and I have been a real estate entrepreneur
+              running my own business since 2003. Real estate development has
+              many aspects that are similar to software development:
+              collaboration, creativity, and making a product, to name three.
+              Since I was a child, I've loved coding, but my career path led me
+              to real estate until this time. I'm very excited to be able to
+              work in coding now.
             </p>
             <p>
-              Education: BS Environmental Design, UC Berkeley; MBA, UC Berkeley.  Currently enrolled in UC Berkeley Extension Full Stack Coding Bootcamp.
+              Education: BS Environmental Design, UC Berkeley; MBA, UC Berkeley.
+              Currently enrolled in UC Berkeley Extension Full Stack Coding
+              Bootcamp.
             </p>
           </div>
         </div>
       </section>
-      <section class=main-section>
-        <div class=main-section-Title id="work-title">Work</div>
-        <div class=main-section-Content id="work-card-container">
+      <section class="main-section">
+        <div class="main-section-Title" id="work-title">Work</div>
+        <div class="main-section-Content" id="work-card-container">
           <!-- Circles - this links to a live page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="https://stuart-rickard.github.io/sandbox/circles/">
-              <img id=circles src="assets/images/circles.png" alt="multi-colored graphic pattern with circles">
+              <img
+                id="circles"
+                src="assets/images/circles.png"
+                alt="multi-colored graphic pattern with circles"
+              />
             </a>
-            <div>Circles
-              <p>Uses the CSS box model to rotate concentric circles within one another</p>
+            <div>
+              Circles
+              <p>
+                Uses the CSS box model to rotate concentric circles within one
+                another
+              </p>
             </div>
           </article>
           <!-- Abstract Art - this links to the "under construction" page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="underconstruction.html">
-              <img id=abstract-art src="assets/images/abstract.png" alt="primary color composition inspried by Piet Mondtrian's art">
+              <img
+                id="abstract-art"
+                src="assets/images/abstract.png"
+                alt="primary color composition inspried by Piet Mondtrian's art"
+              />
             </a>
-            <div>Abstract Art
-              <p>Generates Mondrian-like compositions using the CSS box model</p>
+            <div>
+              Abstract Art
+              <p>
+                Generates Mondrian-like compositions using the CSS box model
+              </p>
+            </div>
+          </article>
+          <!-- Penguin Planner - this links to a live page -->
+          <article class="work-card">
+            <a href="https://penguin-planner.herokuapp.com/">
+              <img
+                id="penguin"
+                src="assets/images/penguin.png"
+                alt="screenshot showing a website"
+              />
+            </a>
+            <div>
+              Penguin Planner
+              <p>Full-stack app for organizing an event with friends</p>
             </div>
           </article>
           <!-- Sunny Weekend - this links to a live page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="https://deivrs60.github.io/sunny-weekend/">
-              <img id=sunny-weekend src="assets/images/sunny-weekend.png" alt="screenshot showing a website">
+              <img
+                id="sunny-weekend"
+                src="assets/images/sunny-weekend.png"
+                alt="screenshot showing a website"
+              />
             </a>
-            <div>Sunny Weekend
-              <p>Uses Google Maps and OpenWeather API's to select a city by location and temperature</p>
+            <div>
+              Sunny Weekend
+              <p>
+                Uses Google Maps and OpenWeather API's to select a city by
+                location and temperature
+              </p>
             </div>
           </article>
           <!-- Run Buddy - this links to a live page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="https://stuart-rickard.github.io/runbuddy2/">
-              <img id=run-buddy src="assets/images/run-buddy.png" alt="screenshot showing a website">
+              <img
+                id="run-buddy"
+                src="assets/images/run-buddy.png"
+                alt="screenshot showing a website"
+              />
             </a>
-            <div>Run Buddy
-              <p>A two-page website made as part of my coding bootcamp course</p>
+            <div>
+              Run Buddy
+              <p>
+                A two-page website made as part of my coding bootcamp course
+              </p>
             </div>
           </article>
           <!-- Calculator - this links to the "under construction" page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="underconstruction.html">
-              <img id=calculator src="assets/images/calculator.png" alt="calculator with numbered keys">
+              <img
+                id="calculator"
+                src="assets/images/calculator.png"
+                alt="calculator with numbered keys"
+              />
             </a>
-            <div>Calculator
+            <div>
+              Calculator
               <p>Numbers are its specialty</p>
             </div>
           </article>
           <!-- BAU - this links to the "under construction" page -->
-          <article class=work-card>
+          <article class="work-card">
             <a href="underconstruction.html">
-              <img id=BAU src="assets/images/bau.png" alt="screenshot showing a website">
+              <img
+                id="BAU"
+                src="assets/images/bau.png"
+                alt="screenshot showing a website"
+              />
             </a>
-            <div>BAU
-              <p>Basic website I created for my company before I took the coding bootcamp course</p>
+            <div>
+              BAU
+              <p>
+                Basic website I created for my company before I took the coding
+                bootcamp course
+              </p>
             </div>
           </article>
         </div>
       </section>
-      <section class=main-section>
-        <div class=main-section-Title id="contact-me-title">Contact Me</div>
-        <div class=main-section-Content id="contact-me-content">
+      <section class="main-section">
+        <div class="main-section-Title" id="contact-me-title">Contact Me</div>
+        <div class="main-section-Content" id="contact-me-content">
           <a href="tel:+15104999400">+1.510.499.9400</a>
           <a href="mailto:SR@bau-dev.com">SR@bau-dev.com</a>
           <a href="https://github.com/stuart-rickard">Github</a>
